sw/source/core/table/swtable.cxx
@@ -1727,6 +1727,8 @@ void SwTable::UpdateFields(TableFormulaUpdateFlags eFlags)
         {
             if(eFlags == TBL_BOXPTR)
                 pBoxFormula->TryBoxNmToPtr();
+            else if(eFlags == TBL_RELBOXNAME)
+                pBoxFormula->ToRelBoxNm(this);
             else
                 pBoxFormula->ChangeState();
         }
